--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,19 @@
     /* Define a CSS variable for the background color */
     --bg-color: #e0dede;
     --black-color: #272523;
-    --autofill-background: #e1dfdf;
+    --autofill-background: #e0dede;
     /* Define a font-family variable with fallbacks */
     --font-family-poppins: 'Poppins', sans-serif;
 }
 
 /* Apply the CSS variable to the input field */
-form input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 30px 0 var(--autofill-background, #e1dfdf) inset !important;
-    -webkit-text-fill-color: #272525 !important;
+form input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active {
+        transition: background-color 5000s;
+        -webkit-box-shadow: 0 0 30px 0 var(--autofill-background, #e0dede) inset !important;
+        -webkit-text-fill-color: #272525 !important;
 }
 
 * {
@@ -116,10 +120,12 @@ body {
     height: 110vh;
     display: flex;
     align-items: center;
-    /* padding: 0 10%; */
+    padding: 0 10%;
+    text-align: left;
     justify-content: center;
     max-width: 100%;
-    margin: auto; /* Center the content */
+    /* justify-content: space-between; */
+    /* margin: auto; Center the content */
 }
 
 .home-image {
@@ -128,7 +134,9 @@ body {
     height: auto;
     width: 70%;
     padding-right: 10%;
+    padding: 0 10%;
     padding-left: 5em;
+    justify-content: space-between;
     /* margin-top: 20px; Adjust this margin as needed */
 }
 
@@ -460,6 +468,8 @@ main {
     font-size: 56px;
     font-weight: 700;
     line-height: 1.4;
+    margin-bottom: 20px;
+    text-align: left;
 }
 
 .contact-heading-left p{
@@ -467,6 +477,7 @@ main {
     font-size: 20px;
     margin-top: 30px; 
     display: flex;
+    text-align: left;
 }
 
 .contact-heading-left p i{
@@ -483,7 +494,7 @@ main {
 }
 
 .contact-form-right form button {
-    width: 100%;
+    width: 35%;
     padding: 15px;
     background-color: var(--orange-color, #e28743);
     color: var(--bg-color, #e0dede);
@@ -492,6 +503,8 @@ main {
     border-radius: 6px;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-left: auto; /* Align the button to the right */
+    display: block; /* Make it a block-level element to take up the full width */
 }
 
 .contact-form-right form button:hover {
@@ -523,6 +536,25 @@ form input, form textarea{
     border-radius: 6px;
 }
 
+/* 
+
+input:user-invalid + span::before {
+  content: "✖";
+  color: red;
+} */
+
+/* 
+input:invalid{
+    display: inline-block;
+    margin-top: 5px;
+  }
+
+textarea:invalid{
+  color: red; 
+  display: inline-block;
+  margin-top: 5px;
+} 
+  */
 .social-icons {
     margin-top: 10px;
     /* position: absolute; */
