--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-    --orange-color: #e28743;
-    /* Define a CSS variable for the background color */
+
+    /* Light Mode */
+    /* --orange-color: #e28743;
     --bg-color: #e0dede;
     --black-color: #272523;
-    --autofill-background: #e0dede;
+    --autofill-background: #e0dede; */
+
+    /* Dark Mode */
+    --bg-color: #081b29;
+    --orange-color: #00abf0;
+    --black-color: #ffffff;
+    --autofill-background: #e0dede; */
+
     /* Define a font-family variable with fallbacks */
     --font-family-poppins: 'Poppins', sans-serif;
 }
@@ -26,6 +34,9 @@ input:-webkit-autofill:active {
     box-sizing:border-box;
     font-family: var(--font-family-poppins, 'Poppins', sans-serif);
 }
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     background: var(--bg-color, #e0dede);
@@ -42,7 +53,7 @@ body {
     left: 0;
     width: 100%;
     padding: 20px 10%;
-    background: #e1dfdf;
+    background: var(--bg-color, #e0dede);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -52,7 +63,7 @@ body {
 .logo{
     position: relative;
     font-weight: 600;
-    color: #272525;
+    color: var(--black-color, #272523);
     text-decoration: none;
     font-size: 25px;
     text-transform: uppercase;
@@ -67,7 +78,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #e1dfdf;
+    background: var(--bg-color, #e0dede);
     transition: .3s;
     animation: showRight 1s ease forwards;
     animation-delay: .4s
@@ -100,12 +111,14 @@ body {
     font-weight: 500;
     margin-left: 35px;
     transition: .3s;
+    background-color: var(--bg-color, #e0dede);
 }
 
 .navbar a:hover,
 .navbar a.active{
     color: var(--orange-color, #e28743);;
 }
+
 
 .header i{
     display: none;
@@ -155,7 +168,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #e1dfdf;
+    background: var(--bg-color, #e0dede);
     transition: .3s;
     animation: showRight 1s ease forwards;
     animation-delay: 1s
@@ -175,7 +188,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #e1dfdf;
+    background: var(--bg-color, #e0dede);
     transition: .3s;
     animation: showRight 1s ease forwards;
     animation-delay: 1.3s
@@ -194,7 +207,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #e1dfdf;
+    background: var(--bg-color, #e0dede);
     transition: .3s;
     animation: showRight 1s ease forwards;
     animation-delay: 1.6s
@@ -205,7 +218,7 @@ body {
     justify-content: space-between;
     width: 345px;
     height: 50px;
-    background: #e1dfdf;
+    background: var(--bg-color, #e0dede);
 }
 
 .home-sci {
@@ -236,7 +249,7 @@ body {
 }
 
 .home-sci a:hover{
-    color: #081b29;
+    color: var(--black-color, #272523);
     transform: translateY(-5px);
 }
 
@@ -305,6 +318,14 @@ main {
     z-index: 1;
 }
 
+.heading {
+    text-decoration: underline;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
 
 
 /* ABOUT */
@@ -364,7 +385,7 @@ main {
 
 /* Style for the entire job container */
 .job {
-    border: 2px solid var(--orange-color); /* Add border to the job container */
+    border: 2px solid var(--orange-color, #e28743); /* Add border to the job container */
     padding: 20px; /* Add padding for better spacing */
     border-radius: 10px; /* Add rounded corners */
     margin-bottom: 20px; /* Add space between job containers */
@@ -390,7 +411,7 @@ main {
 
 /* Style for the job company name */
 .job-company-name {
-    color: #e28743; /* Set text color */
+    color: var(--orange-color, #e28743); /* Set text color */
     font-size: 1.5em; /* Set font size */
     margin-bottom: 10px; /* Add space below the company name */
 }
@@ -508,7 +529,7 @@ main {
 }
 
 .contact-form-right form button:hover {
-    background-color: #081b29;
+    background-color: var(--black-color, #272523);
 }
 
 /* Media query for responsiveness */
@@ -531,7 +552,7 @@ form input, form textarea{
     background: var(--bg-color, #e0dede);
     padding: 15px;
     margin: 15px 0;
-    color: #272525;
+    color: var(--black-color, #272523);
     font-size: 20px;
     border-radius: 6px;
 }
@@ -586,7 +607,7 @@ textarea:invalid{
 }
 
 .social-icons a:hover{
-    color: #081b29;
+    color: var(--black-color, #272523);
     transform: translateY(-5px);
 }
 
@@ -636,7 +657,7 @@ textarea:invalid{
 
 @media (color-gamut: srgb){
     .btn.btn2 {
-        background: #e0dede;
+        background: var(--black-color, #272523);
     }
 }
 
@@ -673,7 +694,7 @@ textarea:invalid{
 .menu-toggle span {
     height: 3px;
     width: 25px;
-    background: #272523;
+    background: var(--black-color, #272523);
     margin: 5px 0;
     display: block;
     transition: 0.4s;
@@ -772,7 +793,7 @@ div.sums {
 .sums h4 {
     margin-top: 10px;
     font-style: italic;
-    color: #e28743; /* Orange color */
+    color: var(--orange-color, #e28743) /* Orange color */
 }
 
 .sums p {
