--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     --bg-color: #081b29;
     --orange-color: #00abf0;
     --black-color: #ffffff;
-    --autofill-background: #e0dede; */
+    --autofill-background: #e0dede;
 
     /* Define a font-family variable with fallbacks */
     --font-family-poppins: 'Poppins', sans-serif;
