--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 :root {
-
     /* Light Mode */
-    /* --orange-color: #e28743;
+    --orange-color: #e28743;
     --bg-color: #e0dede;
     --black-color: #272523;
     --autofill-background: #e0dede; */
-
-    /* Dark Mode */
-    --bg-color: #081b29;
-    --orange-color: #00abf0;
-    --black-color: #ffffff;
-    --autofill-background: #e0dede;
 
     /* Define a font-family variable with fallbacks */
     --font-family-poppins: 'Poppins', sans-serif;
@@ -34,9 +27,6 @@ input:-webkit-autofill:active {
     box-sizing:border-box;
     font-family: var(--font-family-poppins, 'Poppins', sans-serif);
 }
-html {
-    scroll-behavior: smooth;
-}
 
 body {
     background: var(--bg-color, #e0dede);
@@ -53,7 +43,7 @@ body {
     left: 0;
     width: 100%;
     padding: 20px 10%;
-    background: var(--bg-color, #e0dede);
+    background: #e1dfdf;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,7 +53,7 @@ body {
 .logo{
     position: relative;
     font-weight: 600;
-    color: var(--black-color, #272523);
+    color: #272525;
     text-decoration: none;
     font-size: 25px;
     text-transform: uppercase;
@@ -78,7 +68,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: var(--bg-color, #e0dede);
+    background: #e1dfdf;
     transition: .3s;
     animation: showRight 1s ease forwards;
     animation-delay: .4s
@@ -111,14 +101,12 @@ body {
     font-weight: 500;
     margin-left: 35px;
     transition: .3s;
-    background-color: var(--bg-color, #e0dede);
 }
 
 .navbar a:hover,
 .navbar a.active{
     color: var(--orange-color, #e28743);;
 }
-
 
 .header i{
     display: none;
@@ -168,7 +156,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: var(--bg-color, #e0dede);
+    background: #e1dfdf;
     transition: .3s;
     animation: showRight 1s ease forwards;
     animation-delay: 1s
@@ -188,7 +176,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: var(--bg-color, #e0dede);
+    background: #e1dfdf;
     transition: .3s;
     animation: showRight 1s ease forwards;
     animation-delay: 1.3s
@@ -207,7 +195,7 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
-    background: var(--bg-color, #e0dede);
+    background: #e1dfdf;
     transition: .3s;
     animation: showRight 1s ease forwards;
     animation-delay: 1.6s
@@ -218,7 +206,7 @@ body {
     justify-content: space-between;
     width: 345px;
     height: 50px;
-    background: var(--bg-color, #e0dede);
+    background: #e1dfdf;
 }
 
 .home-sci {
@@ -249,7 +237,7 @@ body {
 }
 
 .home-sci a:hover{
-    color: var(--black-color, #272523);
+    color: #081b29;
     transform: translateY(-5px);
 }
 
@@ -318,14 +306,6 @@ main {
     z-index: 1;
 }
 
-.heading {
-    text-decoration: underline;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
-}
 
 
 /* ABOUT */
@@ -385,7 +365,7 @@ main {
 
 /* Style for the entire job container */
 .job {
-    border: 2px solid var(--orange-color, #e28743); /* Add border to the job container */
+    border: 2px solid var(--orange-color); /* Add border to the job container */
     padding: 20px; /* Add padding for better spacing */
     border-radius: 10px; /* Add rounded corners */
     margin-bottom: 20px; /* Add space between job containers */
@@ -411,7 +391,7 @@ main {
 
 /* Style for the job company name */
 .job-company-name {
-    color: var(--orange-color, #e28743); /* Set text color */
+    color: #e28743; /* Set text color */
     font-size: 1.5em; /* Set font size */
     margin-bottom: 10px; /* Add space below the company name */
 }
@@ -529,7 +509,7 @@ main {
 }
 
 .contact-form-right form button:hover {
-    background-color: var(--black-color, #272523);
+    background-color: #081b29;
 }
 
 /* Media query for responsiveness */
@@ -552,7 +532,7 @@ form input, form textarea{
     background: var(--bg-color, #e0dede);
     padding: 15px;
     margin: 15px 0;
-    color: var(--black-color, #272523);
+    color: #272525;
     font-size: 20px;
     border-radius: 6px;
 }
@@ -607,7 +587,7 @@ textarea:invalid{
 }
 
 .social-icons a:hover{
-    color: var(--black-color, #272523);
+    color: #081b29;
     transform: translateY(-5px);
 }
 
@@ -657,7 +637,7 @@ textarea:invalid{
 
 @media (color-gamut: srgb){
     .btn.btn2 {
-        background: var(--black-color, #272523);
+        background: #e0dede;
     }
 }
 
@@ -694,7 +674,7 @@ textarea:invalid{
 .menu-toggle span {
     height: 3px;
     width: 25px;
-    background: var(--black-color, #272523);
+    background: #272523;
     margin: 5px 0;
     display: block;
     transition: 0.4s;
@@ -793,7 +773,7 @@ div.sums {
 .sums h4 {
     margin-top: 10px;
     font-style: italic;
-    color: var(--orange-color, #e28743) /* Orange color */
+    color: #e28743; /* Orange color */
 }
 
 .sums p {
