--- a/styles.css
+++ b/styles.css
@@ -575,7 +575,7 @@ form input, form textarea{
     background: var(--bg-color, #e0dede);
     padding: 15px;
     margin: 15px 0;
-    color: #272525;
+    color: var(--black-color, #272523);
     font-size: 20px;
     border-radius: 6px;
 }
