--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
     --font-family-poppins: 'Poppins', sans-serif;
 }
 
-/* Barbie Theme */
+/* Barbie Theme
 .barbie-theme {
     --orange-color: #e0218a;
     --bg-color: #FFFFFF;
@@ -27,14 +27,14 @@
     --font-family-poppins: 'Poppins', sans-serif;
 }
 
-/* Christmas Theme */
+ Christmas Theme
 .christmas-theme {
     --orange-color: #bb010b;
     --bg-color: #d5f2e3;
     --black-color: #003e1f;
     --autofill-background: #d5f2e3;
     --font-family-poppins: 'Poppins', sans-serif;
-}
+} */
 
 /* Apply the CSS variable to the input field */
 form input:-webkit-autofill,
@@ -819,6 +819,21 @@ footer {
 .footer-icons a:hover::before {
     width: 100%;
 }
+
+.footer-icons::before{    
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--bg-color, #e0dede);
+    transition: .3s;
+    animation: showRight 1s ease forwards;
+    animation-delay: 0.7s;
+    z-index: 2;
+}
+
 
 /* CSS for small phone screens */
 @media only screen and (max-width: 767px) {
